# corgi_stair

./: CMakeLists.txt  README.md  package.xml
include/: leg_info.hpp  plane_segmentation.hpp  plane_tracker.hpp  stair_climb.hpp
src/: CMakeLists.txt  dbscan.cpp  flood_plane_segmentation.cpp  leg_info.cpp  normal_vector_plane_segmentation.cpp  normal_vector_plane_segmentation2.cpp  plane_main.cpp  plane_segmentation.cpp  plane_segmentation_node.cpp  play_motor_cmd.cpp  pointcloud_map.cpp  ransac_plane_segmentation.cpp  save_motor_cmd.cpp  stair_climb.cpp  stair_edge_plane_segmentation.cpp  stair_estimator.cpp  stair_main.cpp  stair_main_indoor.cpp  stair_main_indoor_open.cpp  stair_main_outdoor.cpp  stair_main_outdoor2.cpp  stair_main_outdoor3.cpp  stair_main_outdoor_open.cpp  stair_main_vision.cpp
